style.css
body {
  font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  margin: 0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.main-content {
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
}

.container {
    display: flex;
    flex-grow: 1;
    justify-content: center;
}

.header {
    padding: 15px 0px 25px;
    display: flex;
    justify-content: center;
    align-items: center;
    
}

.header .container{
    max-width: 900px;
    justify-content: space-between;
    align-items: center;
    
}

.header-text {
    font-size: 24px;
    color: #F9FAf8;
}

.header, .part-one {
    background-color: #1f2937;
}

.logo {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
}

.part-one, .part-two, .part-three, .part-four {
    display: flex;
    flex-grow: 1;
    justify-content: center;
    align-items: center;
    padding: 40px;
}

.part.one {
    justify-content: space-between;
}

.part-one .container {
    max-width: 800px;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin-bottom: 50px;
    gap: 40px
}

.hero-left {
    width: 450px;
    flex-grow: 0;
    margin-right: 0px;
    margin-bottom: 20px;
}

.hero-button {
    color: white;
    background-color: #3882F6;
    font-weight: 700;
    border: 0px;
    border-radius: 6px;
    padding: 8px 20px;
    margin-top: 15px;
}


.hero-main-text {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
    margin-bottom: 15px;
}

.hero-second-text {
    font-size: 18px;
    color: #E5E7EB;
}

.main-img {
    width: 300px;
    height: 200px;
    border: 0px solid;
    border-radius: 30px;
    overflow: hidden;
    display: flex;
    justify-content: center;
}

.main-img img {
    height: 200px;
    width: auto;
}



.part-two .container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.info-text {
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
    margin-bottom: 30px;
    text-align: center;
}

.info-second {
    display: flex;
    gap: 50px;
    flex-wrap: wrap;
    justify-content: center;
}

.info-container {
    max-width: 200px;  
}

.img-container {
    width: 200px;
    height: 200px;
    border: 3px solid #3882F6;
    border-radius: 30px;
    overflow: hidden;
    display: flex;
    justify-content: center;
    margin-bottom: 10px;
}

.img-container img {
   width: auto;
}

.subtext {
    text-align: center;
}

.part-three {
    background-color: #E5E7EB;
}

.part-three .container {
    max-width: 800px;
    padding: 30px;
    display: block;
}

.quote {
    font-size: 36px;
    color: #1F2937;
    font-weight: 300;
    font-style: italic;
}

.quote-credits {
    text-align: right;
    font-size: 20px;
    font-weight: bold;
}

.container .signup {
    box-sizing: border-box;
    max-width: 750px;
    height: 100px;
    padding: 20px 60px;
    border-radius: 8px;
    background-color: #3882F6;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 50px;
}

.signup-left {

}


.call-action {
    font-size: 20px;
    font-weight: 700;
    color: white;
    margin-bottom: 8px;
}

.signup-text {
    color: white;
}


.signup-button{
    background-color: #3882F6;
    border: 2px solid white;
    border-radius: 6px;
    color: white;
    padding: 6px 20px;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #1f2937;
    padding: 30px 0px 30px;
}

ul {
  list-style-type: none;
  margin: 0px;
  padding: 0px;
  display: flex;
}

li {
    margin-right: 16px;
}

a {
    text-decoration: none;
}

